<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TableLayout!</string>
    <string name="app_name">Table Layout</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="cel">Celsius</string>
    <string name="fah">Fahrenheit</string>
</resources>
