<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@+id/tableLayout1"
	android:stretchColumns="2" android:layout_height="fill_parent"
	android:layout_width="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	
	<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:gravity="center_horizontal"
		android:textSize="25sp" android:textColor="@color/orange"
		android:text="Temperatures">
	</TextView>

	<TableRow android:id="@+id/tableRow1">
		<TextView android:layout_column="1" android:id="@+id/textView2"
			android:text="@string/cel" android:textSize="@dimen/heading"
			android:gravity="center_horizontal">
		</TextView>
		<TextView android:layout_column="2" android:id="@+id/textView3"
			android:text="@string/fah" android:textSize="@dimen/heading"
			android:paddingLeft="15dp">
		</TextView>
	</TableRow>
	
	<View android:layout_height="2dip" android:background="#FF909090" />
	
	<TableRow>
		<TextView android:id="@+id/textView4" android:text="@string/mon"
			android:textSize="@dimen/medium">
		</TextView>
		<TextView android:layout_column="1" android:id="@+id/textView5"
			android:text="14" android:paddingLeft="35dp">
		</TextView>
		<TextView android:layout_column="2" android:id="@+id/textView10"
			android:text="57" android:paddingLeft="35dp">
		</TextView>
	</TableRow>
	
	<View android:layout_height="2dip" android:background="#FF909090" />
	
	<TableRow>
		<TextView android:id="@+id/textView6" android:text="@string/tue"
			android:textSize="@dimen/medium">
		</TextView>
		<TextView android:id="@+id/textView11" android:text="16"
			android:paddingLeft="35dp"></TextView>
		<TextView android:id="@+id/textView12" android:layout_column="2"
			android:text="61" android:paddingLeft="35dp"></TextView>
	</TableRow>
	
	<View android:layout_height="2dip" android:background="#FF909090" />
	
	<TableRow>
		<TextView android:id="@+id/textView7" android:text="@string/wed"
			android:textSize="@dimen/medium">
		</TextView>
		<TextView android:id="@+id/textView13" android:text="12"
			android:paddingLeft="35dp"></TextView>
		<TextView android:id="@+id/textView14" android:layout_column="2"
			android:text="54" android:paddingLeft="35dp"></TextView>
	</TableRow>
	
	<View android:layout_height="2dip" android:background="#FF909090" />
	
	<TableRow>
		<TextView android:id="@+id/textView8" android:text="@string/thu"
			android:textSize="@dimen/medium">
		</TextView>
		<TextView android:id="@+id/textView15" android:text="18"
			android:paddingLeft="35dp"></TextView>
		<TextView android:id="@+id/textView16" android:layout_column="2"
			android:text="65" android:paddingLeft="35dp"></TextView>
	</TableRow>
	
	<View android:layout_height="2dip" android:background="#FF909090" />
	
	<TableRow>
		<TextView android:id="@+id/textView9" android:text="@string/fri"
			android:textSize="@dimen/medium">
		</TextView>
		<TextView android:id="@+id/textView17" android:text="21"
			android:paddingLeft="35dp"></TextView>
		<TextView android:id="@+id/textView18" android:layout_column="2"
			android:text="70" android:paddingLeft="35dp"></TextView>
	</TableRow>
	
	<View android:layout_height="2dip" android:background="#FF909090" />
	
</TableLayout>
